# verona-rt-gc-bench

./: .gitignore  README.md
.github/workflows/: cmake.yml
CSVs/benchmarks-con-father_lib/: best_case.csv  mid_case.csv  worst_case.csv
CSVs/benchmarks-con-gol/: benchmarks_con_gol_trace.csv
CSVs/benchmarks-con-pointer_churn/: benchmarks_con_pointer_churn_trace.csv
CSVs/benchmarks-con-reproduction/: benchmarks_con_reproduction.csv
docs/: verona_implementation_notes.md
src/: CMakeLists.txt  visualizer.py
src/benchmarker/: CMakeLists.txt  benchmark_main.cc  benchmark_main_helper.h  export_macro.h
src/rt/: CMakeLists.txt
src/rt/boc/: behaviourcore.h
src/rt/cpp/: vobject.h
src/rt/object/: object.h
src/rt/region/: region.h  region_api.h  region_arena.h  region_base.h  region_rc.h  region_semispace.h  region_trace.h  rememberedset.h
src/rt/sched/: threadpool.h
src/rt/util/: gc_benchmark.h
test/: CMakeLists.txt
test/benchmarks/: README.md  benchmarking.md
test/benchmarks/arbitrary_nodes/: arbitrary_nodes.cc  arbitrary_nodes.h
test/benchmarks/father/: father.cc  father.h
test/benchmarks/gol/: gol.cc  gol.h  gol_rc.h
test/benchmarks/grid_walkers/: grid_walkers.cc  grid_walkers.h
test/benchmarks/partially_connected_arbitrary_nodes/: arbitrary_nodes.cc  arbitrary_nodes.h  partially_connected.cc  partially_connected.h
test/benchmarks/pointer_churn/: pointer_churn.cc  pointer_churn.h
test/benchmarks/pointer_churn_with_concurrency/: pointer_churn_with_concurrency.cc  pointer_churn_with_concurrency.h
test/benchmarks/reproduction/: reproduction.cc  reproduction.h
test/benchmarks/tree_transform/: tree_transform.cc  tree_transform.h
test/benchmarks/workloads/: workload_tree.cc
test/func/arbitrary_nodes/: arbitrary_nodes.cc  arbitrary_nodes.h
test/func/binomial_heap/: binomial_heap.cc  binomial_heap.h  binomial_tree.h
test/func/conc_gc1/: conc_gc1.cc
test/func/cycles/: cycles_rc.cc  cycles_rc.h
test/func/fig1/: fig1.cc
test/func/gol/: gol.cc  gol.h  gol_rc.h
test/func/grid_walkers/: grid_walkers.cc  grid_walkers.h
test/func/lru_cache/: lru_cache.cc  lru_cache.h
test/func/memory/: memory.h
test/func/memory_tree/: memory_tree.cc  memory_tree.h
test/func/our_tests/: nothing.cc
test/func/pointer_churn/: pointer_churn.cc  pointer_churn.h
test/func/rc_dealloc_lins_stack_elem/: rc_dealloc_lins_stack_elem.h
test/func/rc_distant_cycle/: rc_distant_cycle.h
test/func/rc_release_lins_double_free/: rc_release_lins_double_free.cc  rc_release_lins_double_free.h
test/func/reproduction/: reproduction.cc  reproduction.h
test/func/semispace_gc/: semispace_gc.cc  semispace_gc.h
test/func/tree_transform/: tree_transform.cc
test/func/workloads/: workload_tree.cc  workload_tree.h
utils/: benchmark_visualizer.py  python_visualizer.md  requirements.txt
